--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body.fade-out {
 
 .header{
     /*margin-top: 2.5vh;*/
-    width: 100vw;
+    width: auto;
     height: 95vh;
     background-color: #00499C;
     display: flex;
@@ -26,11 +26,11 @@ body.fade-out {
 }
 
 a {
-    color: rgb(0, 102, 218);
+    color: #00499C;
 }
 
 a:hover{
-    color: #00499C;
+    color: rgb(0, 52, 112);
 }
 
 #personal{
@@ -110,4 +110,25 @@ hr {
 #move {
     display: flex;
     justify-content: flex-end;
+}
+
+#footer{
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    justify-items: center;
+    height: auto;
+    padding: 20px;
+    background-color: rgb(75, 75, 75);
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+#footer a{
+    color: white;
+}
+
+#footer a:hover{
+    color: rgb(204, 204, 204);
+    text-decoration: none;
 }
